fix jump effect on rhythmbox(3.4.8)) play button

--- a/Midnight-Night/gtk-3.0/gtk-dark.css
+++ b/Midnight-Night/gtk-3.0/gtk-dark.css
@@ -4474,7 +4474,7 @@ terminal-window notebook > header.top button,
 .mate-terminal notebook > header.top button {
   padding: 0;
   min-width: 24px;
-  min-height: 24px;
+  min-height: 24hx;
 }
 
 .nautilus-canvas-item {
@@ -5958,6 +5958,13 @@ event.slanted-end label:backdrop, event.slanted-end:backdrop, event.color-light 
 
 calendar-view event label {
   padding: 7px 4px;
+}
+
+/************
+* Rhythmbox *
+************/
+toolbar > toolitem > box > button, .inline-toolbar > toolitem > box > button {
+  padding: 3px 6px;
 }
 
 UnityDecoration {
